--- a/add_data_to_database.ipynb
+++ b/add_data_to_database.ipynb
@@ -14,7 +14,7 @@
     "import MySQLdb\n",
     "import sys\n",
     "import getpass\n",
-    "\n",
+    "from warnings import filterwarnings\n",
     "user = raw_input('Enter Username: ')\n",
     "passwd =  getpass.getpass('Enter Password: ')\n",
     "mydb = raw_input('Enter Database: ')\n",
@@ -28,9 +28,10 @@
     "    db= mydb)\n",
     "    \n",
     "# prepare a cursor object using cursor() method\n",
+    "filterwarnings('ignore', category = db.Warning)\n",
     "\n",
     "cursor = db.cursor()\n",
-    "\n",
+    "enum=0\n",
     "csv_data = csv.reader(file(inputFile))\n",
     "next(csv_data, None)\n",
     "for row in csv_data:\n",
@@ -51,15 +52,17 @@
     "    except MySQLdb.Error, e:\n",
     "        # Rollback in case there is any error\n",
     "        try:\n",
-    "            \n",
-    "            print \"MySQL Error [%d]: %s\" % (e.args[0], e.args[1])\n",
+    "            enum+=1\n",
+    "            #print \"MySQL Error [%d]: %s\" % (e.args[0], e.args[1])\n",
     "        except IndexError:\n",
-    "            print \"MySQL Error: %s\" % str(e)\n",
-    "        print row\n",
+    "            enum+=1\n",
+    "            #print \"MySQL Error: %s\" % str(e)\n",
+    "        #print row\n",
     "        db.rollback()\n",
     "# disconnect from server\n",
     "db.close()\n",
-    "print \"Done\""
+    "print \"Done\"\n",
+    "print enum"
    ]
   },
   {
